# fastapi_blog

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  requirements.txt
backend/: .env.example  .flake8  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 2023_07_13_2228-671c1e631b97_init.py
backend/src/: config.py  main.py
backend/src/app/main/: config.py  main.py
backend/src/application/auth/: auth.py  jwt.py
backend/src/application/managers/: users.py
backend/src/application/models/: posts.py  tags.py
backend/src/auth/: auth.py  jwt.py
backend/src/db/: base.py  database.py
backend/src/dependencies/: jwt.py  posts.py  tags.py  uow.py  users.py
backend/src/exceptions/: base.py  users.py
backend/src/main/: config.py  main.py
backend/src/managers/: users.py
backend/src/models/: jwt.py  posts.py  tags.py  users.py
backend/src/repositories/: base.py  jwt.py  posts.py  tags.py  users.py
backend/src/routers/: jwt.py  posts.py  tags.py  users.py
backend/src/schemas/: base.py  jwt.py  posts.py  tags.py  users.py
backend/src/services/: jwt.py  posts.py  tags.py  users.py
backend/src/tasks/: users.py
backend/src/uow/: __init__.py  uow.py
backend/src/utils/: as_form.py  upload_image.py  utils.py
backend/tests/: conftest.py  test_posts.py  test_tags.py  test_users.py
backend/tests/v1/: test_posts.py  test_tags.py  test_users.py
(+202 files in other folders)
